Fixes header search form on mobile and default search form, adds 404 page template

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.category, .single, .page, .archive {
+.category, .single, .page, .archive, .page.page-template {
 	#main {
 		background-color: $white;
 		padding-top: 30px; 
